oxiplate-derive/tests/broken/derive/colon-and-string.stderr
error: Failed to parse inline template. Should look something like:
       #[oxiplate_inline(html: "{{ your_var }}")]
 --> tests/broken/derive/colon-and-string.rs:4:19
  |
4 | #[oxiplate_inline(:"")]
  |                   ^

error: unsupported expression; enable syn's features=["full"]
 --> tests/broken/derive/colon-and-string.rs:4:19
  |
4 | #[oxiplate_inline(:"")]
  |                   ^
